# zero2prod

./: Cargo.toml  Dockerfile  spec.yaml
.cargo/: config.toml
.sqlx/: query-23fef6b98c8d9023d60635d0b9d421199fdbc0e0d0c7f638476b572b68551fe3.json  query-2b0586bd52bc495ac1c88e6bc1e219182a1a34026d8cb33b3ad2998c79fa1c73.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20250901160503_create_subscriptions_table.sql  20250905150928_add_status_to_subscriptions.sql  20250905151332_make_status_not_null_in_subscriptions.sql  20250905151610_create_subscription_tokens_table.sql  20250928074634_create_users_table.sql  20250928082646_add_salt_to_users.sql  20250928084842_remove_salt_from_users.sql  20250930170136_seed_user.sql  20250930181120_relax_null_checks_on_idempotency.sql  20250930181217_create_issue_delivery_queue_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
