[package]
name    = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
config = "0.15.15"
uuid = { version = "1.18.0", features = ["v4"] }
chrono = { version = "0.4.41", default-features = false, features = ["clock"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.20", features = [
  "registry",
  "env-filter",
] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
secrecy = { version = "0.10.3", features = ["serde"] }
tracing-actix-web = "0.7.19"
serde-aux = "4.7.0"
unicode-segmentation = "1.12.0"
validator = "0.16.0"

[dependencies.sqlx]
version          = "0.8"
default-features = false

features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
]

[dev-dependencies]
claims            = "0.8.0"
fake              = "~2.3"
once_cell         = "1.21.3"
quickcheck        = "0.9.2"
quickcheck_macros = "0.9.1"
reqwest           = "0.11"
